--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <button id="generate">Generate</button>
     <div class="container">
         <p id="quote">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, similique ullam eaque qui quaerat magnam eligendi labore nisi at et quo laboriosam deserunt quibusdam quae ducimus ex porro tempora quasi!     
+                When you try to impress others, you lose yourself. when you focus on impressing yourself, you grow.
         </p>
-        <p id="author">-Author</p>
+        <p id="author">-Gayathri</p>
     </div>
     </div>
     <script src="script.js"></script>
