--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <button id="generate">Generate</button>
     <div class="container">
         <p id="quote">
-                When you try to impress others, you lose yourself. when you focus on impressing yourself, you grow.
+                When you try to impress others, you lose yourself. when you focus on impressing yourself, you grow 🔥.
         </p>
-        <p id="author">-Gayathri</p>
+        <p id="author">- Gayathri</p>
     </div>
     </div>
     <script src="script.js"></script>
